[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval_rebot_arm_dm"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "draccus",
    "matplotlib",
    "ipython",
    "msgpack==1.1.0",
    "msgpack-numpy==0.4.8",
    "zmq",
    "lerobot @ git+https://github.com/Seeed-Projects/lerobot.git",
    "lerobot-robot-seeed-b601 @ git+https://github.com/Seeed-Projects/lerobot-robot-seeed-b601.git",
    "motorbridge",
]

# Please also manually install `uv pip install --no-deps -e ../../../../`

